--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -25,8 +25,33 @@
     <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
+        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
+          <div class="menu-collapse" style="font-weight: 700;">
+            <a class="u-button-style u-custom-active-color u-custom-text-color u-custom-text-hover-color u-nav-link" href="#">
+              <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e2b3"></use></svg>
+              <svg class="u-svg-content" version="1.1" id="svg-e2b3" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+</g></svg>
+            </a>
+          </div>
+          <div class="u-nav-container">
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="TEDxADIS-Muroor-Youth.html">TEDxADIS Muroor Youth</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="About-TED.html">About TED</a>
+</li></ul>
+          </div>
+          <div class="u-nav-container-collapse">
+            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+              <div class="u-inner-container-layout u-sidenav-overflow">
+                <div class="u-menu-close"></div>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="TEDxADIS-Muroor-Youth.html">TEDxADIS Muroor Youth</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-TED.html">About TED</a>
+</li></ul>
+              </div>
+            </div>
+            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+          </div>
+        </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-container-align-center u-section-1" id="sec-51fb">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
