--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -26,7 +26,7 @@
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
+        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-weight: 700;">
             <a class="u-button-style u-custom-active-color u-custom-text-color u-custom-text-hover-color u-nav-link" href="#">
