--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -26,7 +26,7 @@
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
+        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000" data-href="tedxadismuroor.github.io">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-weight: 700;">
             <a class="u-button-style u-custom-active-color u-custom-text-color u-custom-text-hover-color u-nav-link" href="#">
@@ -35,17 +35,15 @@
 </g></svg>
             </a>
           </div>
-          <div class="u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="TEDxADIS-Muroor-Youth.html">TEDxADIS Muroor Youth</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="About-TED.html">About TED</a>
+          <div class="u-custom-menu u-nav-container">
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="About-TED.html">About TED</a>
 </li></ul>
           </div>
-          <div class="u-nav-container-collapse">
+          <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="TEDxADIS-Muroor-Youth.html">TEDxADIS Muroor Youth</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-TED.html">About TED</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-TED.html">About TED</a>
 </li></ul>
               </div>
             </div>
