--- a/Team.html
+++ b/Team.html
@@ -55,33 +55,39 @@
     <section class="u-black u-clearfix u-section-1" id="sec-97d9">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-title u-text-1">The team</h1>
-        <img class="u-image u-image-circle u-image-1" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
-        <img class="u-image u-image-circle u-image-2" src="images/WhatsAppImage2023-09-27at19.10.58.jpg" alt="" data-image-width="328" data-image-height="660">
-        <img class="u-image u-image-circle u-image-3" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
-        <h6 class="u-custom-font u-text u-text-default u-text-2">kayal jeyaseelan</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-default u-text-3"> Nikhilesh Kss</h6>
-        <h6 class="u-custom-font u-text u-text-default u-text-4">Johan Sebastian</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-5">co-organizer</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-6">organizer</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-7"> Executive Producer</h6>
-        <img class="u-image u-image-circle u-image-4" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
-        <img class="u-image u-image-circle u-image-5" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
+        <img class="u-image u-image-circle u-image-1" src="images/WhatsAppImage2023-10-21at18.43.05_1ac52d52.jpg" alt="" data-image-width="1077" data-image-height="677">
+        <img class="u-image u-image-circle u-image-2" src="images/WhatsAppImage2023-10-19at20.40.34_93fc451b2.jpg" alt="" data-image-width="483" data-image-height="532">
+        <img class="u-image u-image-circle u-image-3" src="images/WhatsAppImage2023-09-27at19.10.58.jpg" alt="" data-image-width="328" data-image-height="660">
+        <h6 class="u-align-center u-custom-font u-text u-text-default u-text-2"> Nikhilesh Kss</h6>
+        <h6 class="u-custom-font u-text u-text-default u-text-3">Johan Sebastian</h6>
+        <h6 class="u-custom-font u-text u-text-default u-text-4">kayal jeyaseelan</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-5">organizer</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-6"> Executive Producer</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-7">co-organizer</h6>
+        <img class="u-image u-image-circle u-image-4" src="images/WhatsAppImage2023-10-18at21.16.17_d8ca4509.jpg" alt="" data-image-width="377" data-image-height="520">
+        <img class="u-image u-image-circle u-image-5" src="images/311889191_1251990822415769_6333576377281548331_n.jpg" alt="" data-image-width="640" data-image-height="640">
         <img class="u-image u-image-circle u-image-6" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
         <h6 class="u-custom-font u-text u-text-default u-text-8">jacob antony</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-9">vidhi rakshe</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-default u-text-10">liann susan</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-11">co-organizer</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-12">co-organizer</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-13">organizer</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-11"> Production</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-12"> Operations</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-13"> Operations</h6>
         <img class="u-image u-image-circle u-image-7" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
         <img class="u-image u-image-circle u-image-8" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
-        <img class="u-image u-image-circle u-image-9" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
+        <img class="u-image u-image-circle u-image-9" src="images/WhatsAppImage2023-10-20at12.46.56_5108bb1a.jpg" alt="" data-image-width="3000" data-image-height="4000">
         <h6 class="u-align-center u-custom-font u-text u-text-default u-text-14">Resa</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-15">keegan d'silva</h6>
-        <h6 class="u-custom-font u-text u-text-default u-text-16">Anurag Sharma</h6>
-        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-17">Media</h6>
+        <h6 class="u-custom-font u-text u-text-default u-text-16">Rijul menon</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-17">Speaker Coordinator</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-18">Media</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-19">marketing</h6>
+        <img class="u-image u-image-circle u-image-10" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
+        <img class="u-image u-image-circle u-image-11" src="images/WhatsAppImage2023-09-27at18.23.37.jpg" alt="" data-image-width="299" data-image-height="386">
+        <h6 class="u-align-center u-custom-font u-text u-text-default u-text-20">Resa</h6>
+        <h6 class="u-custom-font u-text u-text-default u-text-21">Anurag Sharma</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-22">Media</h6>
+        <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-23">Media</h6>
       </div>
     </section>
     
