--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@ TEDx community">
           <br>Following the resounding success of our first edition, we returned even stronger on October 7, 2018, for our second edition. It was a day filled with insightful talks, engaging discussions, and the celebration of youthful creativity. <br>
           <br>Today, we proudly present the third edition of TEDxADIS Muroor Youth, building on the foundation of our past experiences and pushing the boundaries of inspiration further than ever before. As we continue to evolve and innovate, we invite you to be a part of this exciting journey towards a brighter and more dynamic future. Welcome to TEDxADIS Muroor Youth 2023!<br>
         </p>
-        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-beef">
+        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-489f">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-            <li data-u-target="#carousel-beef" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-beef" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-beef" data-u-slide-to="2" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-beef" data-u-slide-to="3" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-489f" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-489f" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-489f" data-u-slide-to="2" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
+            <li data-u-target="#carousel-489f" data-u-slide-to="3" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
           </ol>
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
@@ -203,7 +203,7 @@ TEDx community">
               <style data-mode="XS"></style>
             </div>
           </div>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-beef" role="button" data-u-slide="prev">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-489f" role="button" data-u-slide="prev">
             <span aria-hidden="true">
               <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
 c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
@@ -215,7 +215,7 @@ c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.3
 c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
             </span>
           </a>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-beef" role="button" data-u-slide="next">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-489f" role="button" data-u-slide="next">
             <span aria-hidden="true">
               <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
@@ -262,6 +262,44 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 <img class="u-expanded-width u-image u-image-default u-image-4" alt="" data-image-width="828" data-image-height="1029" src="images/IMG_7302.jpg">
                 <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-8"> Deepangika Pillai</h4>
                 <p class="u-text u-text-9"> Robotics master's student, leader, and Lockheed Martin Robotics Intern at Heriot Watt University with a passion for personal growth through embracing discomfort.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-5">
+                <img class="u-expanded-width u-image u-image-default u-image-5" alt="" data-image-width="3000" data-image-height="3000" src="images/mehek.jpg">
+                <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-10">Mehek Suhin</h4>
+                <p class="u-text u-text-11">A 16-year-old with a passion for public speaking, history, economics, and baking.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-6">
+                <img class="u-expanded-width u-image u-image-default u-image-6" alt="" data-image-width="1200" data-image-height="1600" src="images/image2.png">
+                <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-12">aditya<br>mallya
+                </h4>
+                <p class="u-text u-text-13"> A&nbsp;devoted actor, and a vibrant dancer who radiates boundless talent and energy. His passion for public speaking and performance is truly infectious, transcending boundaries and captivating audiences.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-7">
+                <img class="u-expanded-width u-image u-image-default u-image-7" alt="" data-image-width="768" data-image-height="1024" src="images/RishikeshSaginTedxphoto.jpeg">
+                <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-14"> Rishikesh Sagin<br>
+                </h4>
+                <p class="u-text u-text-15"> A&nbsp;student who passionately embraces the world of literature as a fantasy novelist and short story writer. Rishikesh isn't just a wordsmith; he's also a captivating speaker and an avid reader, navigating the limitless realms of imagination.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-8">
+                <img class="u-expanded-width u-image u-image-default u-image-8" alt="" data-image-width="716" data-image-height="1024" src="images/Anushreephoto.jpg">
+                <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-16"> Anushree Joshi&nbsp;<br>
+                </h4>
+                <p class="u-text u-text-17"> A&nbsp;dedicated student who embodies passion and versatility. She effortlessly maintains a harmonious balance between her profound love for both sports and academics, showcasing her unwavering commitment to excelling in every facet of life.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-9">
+                <img class="u-expanded-width u-image u-image-default u-image-9" alt="" data-image-width="716" data-image-height="1024" src="images/Anushreephoto.jpg">
+                <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-18">Mehek Suhin</h4>
+                <p class="u-text u-text-19"> Mehek, a 16-year-old with a passion for public speaking, history, economics, and baking.</p>
               </div>
             </div>
           </div>
